[tool.poetry]
name = "python-async-10-26"
version = "0.1.0"
description = "Examples for the blog post \"Understanding Async/Await in Python\""
authors = ["Zech Zimmerman <hi@zech.codes>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.32.3"
httpx = "^0.27.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
